[package]
name = "advent_of_code_23"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc32lib"
path = "src/lib.rs"

[[bin]]
name = "aoc32bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nom = "7.1.3"
num = "0.4.1"
